Kubernetes-Manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    # alb.ingress.kubernetes.io/subnets: "subnet-0aa439b4ddafcca10,subnet-0b95df318219145ca,subnet-0ccca36474902829a"
spec:
  ingressClassName: alb
  rules:
  - host: major1cloudquest.cloud # Replace with your domain
    http:
      paths:
      - path: /api/ # Route /api/* requests to the backend
        pathType: Prefix 
        backend:
          service:
            name: api
            port:
              number: 5000
      - path: / # Route all other requests to the frontend
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80 # The frontend service exposes on 80
